SERVER-80538 Resume migrations on error in refine collection shard key only if index validation fails